include/codata_constants_2018.h

ADD_IMPORT extern const double ATOMIC_UNIT_OF_CURRENT;/**< A */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_CURRENT;/**< A */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM;/**< C m */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM;/**< C m */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_FIELD;/**< V m^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_FIELD;/**< V m^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT;/**< V m^-2 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT;/**< V m^-2 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY;/**< C^2 m^2 J^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY;/**< C^2 m^2 J^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL;/**< V */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL;/**< V */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM;/**< C m^2 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM;/**< C m^2 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ENERGY;/**< J */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ENERGY;/**< J */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_FORCE;/**< N */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_FORCE;/**< N */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_LENGTH;/**< m */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_LENGTH;/**< m */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MAG__DIPOLE_MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM;/**< J T^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MAG__FLUX_DENSITY;/**< T */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY;/**< T */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MAGNETIZABILITY;/**< J T^-2 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MAGNETIZABILITY;/**< J T^-2 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MASS;/**< kg */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MASS;/**< kg */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_MOMENTUM;/**< kg m s^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_MOMENTUM;/**< kg m s^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_PERMITTIVITY;/**< F m^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_PERMITTIVITY;/**< F m^-1 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_TIME;/**< s */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_TIME;/**< s */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_VELOCITY;/**< m s^-1 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_VELOCITY;/**< m s^-1 */
ADD_IMPORT extern const double AVOGADRO_CONSTANT;/**< mol^-1 */
ADD_IMPORT extern const double U_AVOGADRO_CONSTANT;/**< mol^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON;/**< J T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON;/**< J T^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON_IN_EV_T;/**< eV T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON_IN_EV_T;/**< eV T^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON_IN_HZ_T;/**< Hz T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON_IN_HZ_T;/**< Hz T^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA;/**< m^-1 T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA;/**< m^-1 T^-1 */
ADD_IMPORT extern const double BOHR_MAGNETON_IN_K_T;/**< K T^-1 */
ADD_IMPORT extern const double U_BOHR_MAGNETON_IN_K_T;/**< K T^-1 */
ADD_IMPORT extern const double BOHR_RADIUS;/**< m */
ADD_IMPORT extern const double U_BOHR_RADIUS;/**< m */
ADD_IMPORT extern const double BOLTZMANN_CONSTANT;/**< J K^-1 */
ADD_IMPORT extern const double U_BOLTZMANN_CONSTANT;/**< J K^-1 */
ADD_IMPORT extern const double BOLTZMANN_CONSTANT_IN_EV_K;/**< eV K^-1 */
ADD_IMPORT extern const double U_BOLTZMANN_CONSTANT_IN_EV_K;/**< eV K^-1 */
ADD_IMPORT extern const double BOLTZMANN_CONSTANT_IN_HZ_K;/**< Hz K^-1 */
ADD_IMPORT extern const double U_BOLTZMANN_CONSTANT_IN_HZ_K;/**< Hz K^-1 */