src/codata_constants_latest.f90


real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_CURRENT"):: &
capi_025=ATOMIC_UNIT_OF_CURRENT !< C API A
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_CURRENT") :: &
capi_U_025=U_ATOMIC_UNIT_OF_CURRENT !< C API A

real(dp), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM=8.4783536255e-30_dp !< C m
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM=0.0000000013e-30_dp !< C m

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM"):: &
capi_026=ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM !< C API C m
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM") :: &
capi_U_026=U_ATOMIC_UNIT_OF_ELECTRIC_DIPOLE_MOM !< C API C m

real(dp), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_FIELD=5.14220674763e11_dp !< V m^-1
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_FIELD=0.00000000078e11_dp !< V m^-1

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_FIELD"):: &
capi_027=ATOMIC_UNIT_OF_ELECTRIC_FIELD !< C API V m^-1
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_FIELD") :: &
capi_U_027=U_ATOMIC_UNIT_OF_ELECTRIC_FIELD !< C API V m^-1

real(dp), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT=9.7173624292e21_dp !< V m^-2
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT=0.0000000029e21_dp !< V m^-2

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT"):: &
capi_028=ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT !< C API V m^-2
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT") :: &
capi_U_028=U_ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT !< C API V m^-2

real(dp), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY=1.64877727436e-41_dp !< C^2 m^2 J^-1
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY=0.00000000050e-41_dp !< C^2 m^2 J^-1

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY"):: &
capi_029=ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY !< C API C^2 m^2 J^-1
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY") :: &
capi_U_029=U_ATOMIC_UNIT_OF_ELECTRIC_POLARIZABILITY !< C API C^2 m^2 J^-1

real(dp), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL=27.211386245988_dp !< V
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL=0.000000000053_dp !< V

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL"):: &
capi_030=ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL !< C API V
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL") :: &
capi_U_030=U_ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL !< C API V

real(dp), parameter, public :: ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM=4.4865515246e-40_dp !< C m^2
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM=0.0000000014e-40_dp !< C m^2

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM"):: &
capi_031=ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM !< C API C m^2
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM") :: &
capi_U_031=U_ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM !< C API C m^2

real(dp), parameter, public :: ATOMIC_UNIT_OF_ENERGY=4.3597447222071e-18_dp !< J
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_ENERGY=0.0000000000085e-18_dp !< J

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_ENERGY"):: &
capi_032=ATOMIC_UNIT_OF_ENERGY !< C API J
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ENERGY") :: &
capi_U_032=U_ATOMIC_UNIT_OF_ENERGY !< C API J

real(dp), parameter, public :: ATOMIC_UNIT_OF_FORCE=8.2387234983e-8_dp !< N
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_FORCE=0.0000000012e-8_dp !< N

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_FORCE"):: &
capi_033=ATOMIC_UNIT_OF_FORCE !< C API N
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_FORCE") :: &
capi_U_033=U_ATOMIC_UNIT_OF_FORCE !< C API N

real(dp), parameter, public :: ATOMIC_UNIT_OF_LENGTH=5.29177210903e-11_dp !< m
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_LENGTH=0.00000000080e-11_dp !< m

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_LENGTH"):: &
capi_034=ATOMIC_UNIT_OF_LENGTH !< C API m
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_LENGTH") :: &
capi_U_034=U_ATOMIC_UNIT_OF_LENGTH !< C API m

real(dp), parameter, public :: ATOMIC_UNIT_OF_MAG__DIPOLE_MOM=1.85480201566e-23_dp !< J T^-1
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM=0.00000000056e-23_dp !< J T^-1

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_MAG__DIPOLE_MOM"):: &
capi_035=ATOMIC_UNIT_OF_MAG__DIPOLE_MOM !< C API J T^-1
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM") :: &
capi_U_035=U_ATOMIC_UNIT_OF_MAG__DIPOLE_MOM !< C API J T^-1

real(dp), parameter, public :: ATOMIC_UNIT_OF_MAG__FLUX_DENSITY=2.35051756758e5_dp !< T
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY=0.00000000071e5_dp !< T

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_MAG__FLUX_DENSITY"):: &
capi_036=ATOMIC_UNIT_OF_MAG__FLUX_DENSITY !< C API T
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY") :: &
capi_U_036=U_ATOMIC_UNIT_OF_MAG__FLUX_DENSITY !< C API T

real(dp), parameter, public :: ATOMIC_UNIT_OF_MAGNETIZABILITY=7.8910366008e-29_dp !< J T^-2
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_MAGNETIZABILITY=0.0000000048e-29_dp !< J T^-2

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_MAGNETIZABILITY"):: &
capi_037=ATOMIC_UNIT_OF_MAGNETIZABILITY !< C API J T^-2
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MAGNETIZABILITY") :: &
capi_U_037=U_ATOMIC_UNIT_OF_MAGNETIZABILITY !< C API J T^-2

real(dp), parameter, public :: ATOMIC_UNIT_OF_MASS=9.1093837015e-31_dp !< kg
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_MASS=0.0000000028e-31_dp !< kg

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_MASS"):: &
capi_038=ATOMIC_UNIT_OF_MASS !< C API kg
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MASS") :: &
capi_U_038=U_ATOMIC_UNIT_OF_MASS !< C API kg

real(dp), parameter, public :: ATOMIC_UNIT_OF_MOMENTUM=1.99285191410e-24_dp !< kg m s^-1
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_MOMENTUM=0.00000000030e-24_dp !< kg m s^-1

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_MOMENTUM"):: &
capi_039=ATOMIC_UNIT_OF_MOMENTUM !< C API kg m s^-1
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_MOMENTUM") :: &
capi_U_039=U_ATOMIC_UNIT_OF_MOMENTUM !< C API kg m s^-1

real(dp), parameter, public :: ATOMIC_UNIT_OF_PERMITTIVITY=1.11265005545e-10_dp !< F m^-1
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_PERMITTIVITY=0.00000000017e-10_dp !< F m^-1

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_PERMITTIVITY"):: &
capi_040=ATOMIC_UNIT_OF_PERMITTIVITY !< C API F m^-1
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_PERMITTIVITY") :: &
capi_U_040=U_ATOMIC_UNIT_OF_PERMITTIVITY !< C API F m^-1

real(dp), parameter, public :: ATOMIC_UNIT_OF_TIME=2.4188843265857e-17_dp !< s
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_TIME=0.0000000000047e-17_dp !< s

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_TIME"):: &
capi_041=ATOMIC_UNIT_OF_TIME !< C API s
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_TIME") :: &
capi_U_041=U_ATOMIC_UNIT_OF_TIME !< C API s

real(dp), parameter, public :: ATOMIC_UNIT_OF_VELOCITY=2.18769126364e6_dp !< m s^-1
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_VELOCITY=0.00000000033e6_dp !< m s^-1

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_VELOCITY"):: &
capi_042=ATOMIC_UNIT_OF_VELOCITY !< C API m s^-1
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_VELOCITY") :: &
capi_U_042=U_ATOMIC_UNIT_OF_VELOCITY !< C API m s^-1

real(dp), parameter, public :: AVOGADRO_CONSTANT=6.02214076e23_dp !< mol^-1
real(dp), parameter, public :: U_AVOGADRO_CONSTANT=0.0_dp !< mol^-1

real(cdp), protected, public, bind(C,name="AVOGADRO_CONSTANT"):: &
capi_043=AVOGADRO_CONSTANT !< C API mol^-1
real(cdp), protected, public, bind(C,name="U_AVOGADRO_CONSTANT") :: &
capi_U_043=U_AVOGADRO_CONSTANT !< C API mol^-1

real(dp), parameter, public :: BOHR_MAGNETON=9.2740100783e-24_dp !< J T^-1
real(dp), parameter, public :: U_BOHR_MAGNETON=0.0000000028e-24_dp !< J T^-1

real(cdp), protected, public, bind(C,name="BOHR_MAGNETON"):: &
capi_044=BOHR_MAGNETON !< C API J T^-1
real(cdp), protected, public, bind(C,name="U_BOHR_MAGNETON") :: &
capi_U_044=U_BOHR_MAGNETON !< C API J T^-1

real(dp), parameter, public :: BOHR_MAGNETON_IN_EV_T=5.7883818060e-5_dp !< eV T^-1
real(dp), parameter, public :: U_BOHR_MAGNETON_IN_EV_T=0.0000000017e-5_dp !< eV T^-1

real(cdp), protected, public, bind(C,name="BOHR_MAGNETON_IN_EV_T"):: &
capi_045=BOHR_MAGNETON_IN_EV_T !< C API eV T^-1
real(cdp), protected, public, bind(C,name="U_BOHR_MAGNETON_IN_EV_T") :: &
capi_U_045=U_BOHR_MAGNETON_IN_EV_T !< C API eV T^-1

real(dp), parameter, public :: BOHR_MAGNETON_IN_HZ_T=1.39962449361e10_dp !< Hz T^-1
real(dp), parameter, public :: U_BOHR_MAGNETON_IN_HZ_T=0.00000000042e10_dp !< Hz T^-1

real(cdp), protected, public, bind(C,name="BOHR_MAGNETON_IN_HZ_T"):: &
capi_046=BOHR_MAGNETON_IN_HZ_T !< C API Hz T^-1
real(cdp), protected, public, bind(C,name="U_BOHR_MAGNETON_IN_HZ_T") :: &
capi_U_046=U_BOHR_MAGNETON_IN_HZ_T !< C API Hz T^-1

real(dp), parameter, public :: BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA=46.686447783_dp !< m^-1 T^-1
real(dp), parameter, public :: U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA=0.000000014_dp !< m^-1 T^-1

real(cdp), protected, public, bind(C,name="BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA"):: &
capi_047=BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA !< C API m^-1 T^-1
real(cdp), protected, public, bind(C,name="U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA") :: &
capi_U_047=U_BOHR_MAGNETON_IN_INVERSE_METER_PER_TESLA !< C API m^-1 T^-1

real(dp), parameter, public :: BOHR_MAGNETON_IN_K_T=0.67171381563_dp !< K T^-1
real(dp), parameter, public :: U_BOHR_MAGNETON_IN_K_T=0.00000000020_dp !< K T^-1

real(cdp), protected, public, bind(C,name="BOHR_MAGNETON_IN_K_T"):: &
capi_048=BOHR_MAGNETON_IN_K_T !< C API K T^-1
real(cdp), protected, public, bind(C,name="U_BOHR_MAGNETON_IN_K_T") :: &
capi_U_048=U_BOHR_MAGNETON_IN_K_T !< C API K T^-1

real(dp), parameter, public :: BOHR_RADIUS=5.29177210903e-11_dp !< m
real(dp), parameter, public :: U_BOHR_RADIUS=0.00000000080e-11_dp !< m

real(cdp), protected, public, bind(C,name="BOHR_RADIUS"):: &
capi_049=BOHR_RADIUS !< C API m
real(cdp), protected, public, bind(C,name="U_BOHR_RADIUS") :: &
capi_U_049=U_BOHR_RADIUS !< C API m

real(dp), parameter, public :: BOLTZMANN_CONSTANT=1.380649e-23_dp !< J K^-1
real(dp), parameter, public :: U_BOLTZMANN_CONSTANT=0.0_dp !< J K^-1

real(cdp), protected, public, bind(C,name="BOLTZMANN_CONSTANT"):: &
capi_050=BOLTZMANN_CONSTANT !< C API J K^-1
real(cdp), protected, public, bind(C,name="U_BOLTZMANN_CONSTANT") :: &
capi_U_050=U_BOLTZMANN_CONSTANT !< C API J K^-1

real(dp), parameter, public :: BOLTZMANN_CONSTANT_IN_EV_K=8.617333262e-5_dp !< eV K^-1
real(dp), parameter, public :: U_BOLTZMANN_CONSTANT_IN_EV_K=0.0_dp !< eV K^-1

real(cdp), protected, public, bind(C,name="BOLTZMANN_CONSTANT_IN_EV_K"):: &
capi_051=BOLTZMANN_CONSTANT_IN_EV_K !< C API eV K^-1
real(cdp), protected, public, bind(C,name="U_BOLTZMANN_CONSTANT_IN_EV_K") :: &
capi_U_051=U_BOLTZMANN_CONSTANT_IN_EV_K !< C API eV K^-1

real(dp), parameter, public :: BOLTZMANN_CONSTANT_IN_HZ_K=2.083661912e10_dp !< Hz K^-1
real(dp), parameter, public :: U_BOLTZMANN_CONSTANT_IN_HZ_K=0.0_dp !< Hz K^-1

real(cdp), protected, public, bind(C,name="BOLTZMANN_CONSTANT_IN_HZ_K"):: &
capi_052=BOLTZMANN_CONSTANT_IN_HZ_K !< C API Hz K^-1
real(cdp), protected, public, bind(C,name="U_BOLTZMANN_CONSTANT_IN_HZ_K") :: &
capi_U_052=U_BOLTZMANN_CONSTANT_IN_HZ_K !< C API Hz K^-1
